--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,11 +3,7 @@ header {
   position: fixed;
   top: 0;
   width: 100vw;
-  background: linear-gradient(
-    to bottom,
-    #2c0a4c,
-    #0c065f
-  );
+  background: linear-gradient(to bottom, #2c0a4c, #0c065f);
   padding: 1rem;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.6);
 }
@@ -18,7 +14,6 @@ header {
   gap: 15px;
   align-items: center;
   justify-items: center;
-
 }
 
 .item-logo {
@@ -47,6 +42,6 @@ header {
     font-size: 4.5rem;
     margin: 0;
     padding: 0;
-    font-family: 'EasterEarly';
+    font-family: "EasterEarly";
   }
 }
